separate bash set commands

--- a/.github/workflows/build-ocp.yml
+++ b/.github/workflows/build-ocp.yml
@@ -172,7 +172,8 @@ jobs:
         if: matrix.use-vtk == 'vtk' && steps.cache-vtk-restore.outputs.cache-hit != 'true'
         shell: bash -l {0}
         run: |
-          set -eo pipefail
+          set -e
+          set -o pipefail
 
           # Create an environment with conda VTK to get the include files
           micromamba create -y -n vtk python=${{ matrix.python-version }}
@@ -197,7 +198,8 @@ jobs:
         if: matrix.use-vtk == 'vtk' && runner.os != 'Windows' && steps.cache-vtk-restore.outputs.cache-hit != 'true'
         shell: bash -l {0}
         run: |
-          set -eo pipefail
+          set -e
+          set -o pipefail
 
           PY_VER=${{ matrix.python-version }}
 
@@ -230,7 +232,8 @@ jobs:
         if: matrix.use-vtk == 'vtk' && runner.os  == 'Windows'  && steps.cache-vtk-restore.outputs.cache-hit != 'true'
         shell: bash -l {0}
         run: |
-          set -eo pipefail
+          set -e
+          set -o pipefail
 
           PY_VER=${{ matrix.python-version }}
 
@@ -282,7 +285,9 @@ jobs:
         if: steps.cache-occt-restore.outputs.cache-hit != 'true'
         shell: bash -l {0}
         run: |
-          set -euo pipefail
+          set -e
+          set -u
+          set -o pipefail
 
           git clone https://github.com/Open-Cascade-SAS/OCCT.git
           cd OCCT
@@ -307,7 +312,8 @@ jobs:
         if: runner.os  != 'Windows' && steps.cache-occt-restore.outputs.cache-hit != 'true'
         shell: bash -l {0}
         run: |
-          set -eo pipefail
+          set -e
+          set -o pipefail
 
           micromamba activate build-ocp
           cd OCCT
@@ -518,7 +524,9 @@ jobs:
         if: env.PYWRAP == 'true' && runner.os == 'macOS' && steps.cache-ocp-source-restore.outputs.cache-hit != 'true'
         shell: bash -l {0}
         run: |
-          set -euo pipefail
+          set -e
+          set -u
+          set -o pipefail
 
           curl -L -O https://github.com/phracker/MacOSX-SDKs/releases/download/11.3/MacOSX11.3.sdk.tar.xz
           sudo tar -xf MacOSX11.3.sdk.tar.xz -C /opt
@@ -535,7 +543,9 @@ jobs:
         if: env.PYWRAP == 'true' && runner.os == 'Linux' && steps.cache-ocp-source-restore.outputs.cache-hit != 'true'
         shell: bash -l {0}
         run: |
-          set -euo pipefail
+          set -e
+          set -u
+          set -o pipefail
 
           sudo apt-get update && sudo apt-get install g++-13 mesa-common-dev libegl1-mesa-dev libgl1-mesa-dev libglu1-mesa-dev freeglut3-dev
 
@@ -550,7 +560,9 @@ jobs:
         if: env.PYWRAP == 'true' && steps.cache-ocp-source-restore.outputs.cache-hit != 'true'
         shell: bash -l {0}
         run: |
-          set -euo pipefail
+          set -e
+          set -u
+          set -o pipefail
 
           git clone https://github.com/cadquery/OCP.git
           cd OCP
@@ -567,7 +579,8 @@ jobs:
         if: env.PYWRAP == 'true' && runner.os != 'Windows' && steps.cache-ocp-source-restore.outputs.cache-hit != 'true'
         shell: bash -l {0}
         run: |
-          set -eo pipefail
+          set -e
+          set -o pipefail
 
           micromamba activate build-ocp-source
           cd OCP
@@ -587,7 +600,8 @@ jobs:
         if: env.PYWRAP == 'true' && runner.os == 'Windows' && steps.cache-ocp-source-restore.outputs.cache-hit != 'true'
         shell: bash -l {0}
         run: |
-          set -eo pipefail
+          set -e
+          set -o pipefail
 
           micromamba activate build-ocp-source
           cd OCP
@@ -613,7 +627,9 @@ jobs:
         if: env.PYWRAP == 'false'
         shell: bash -l {0}
         run: |
-          set -euo pipefail
+          set -e
+          set -u
+          set -o pipefail
 
           rm -fr OCP  # remove the cached sources again
 
@@ -742,7 +758,8 @@ jobs:
         if: runner.os != 'Linux'
         shell: bash -l {0}
         run: |
-          set -eo pipefail
+          set -e
+          set -o pipefail
 
           micromamba activate build-ocp
           micromamba install -y fontconfig=2.13.* freetype=2.12.* freeimage=3.18.*
@@ -792,7 +809,9 @@ jobs:
         if: matrix.use-vtk == 'novtk'
         shell: bash -l {0}
         run: |
-          set -euo pipefail
+          set -e
+          set -u
+          set -o pipefail
 
           cd OCP/new
           rm OCP/IVtk*
@@ -818,7 +837,9 @@ jobs:
         if: runner.os == 'macOS' && steps.cache-ocp-restore.outputs.cache-hit != 'true'
         shell: bash -l {0}
         run: |
-          set -euo pipefail
+          set -e
+          set -u
+          set -o pipefail
 
           curl -L -O https://github.com/phracker/MacOSX-SDKs/releases/download/11.3/MacOSX11.3.sdk.tar.xz
           sudo tar -xf MacOSX11.3.sdk.tar.xz -C /opt
@@ -833,7 +854,8 @@ jobs:
         if: steps.cache-ocp-restore.outputs.cache-hit != 'true'
         shell: bash -l {0}
         run: |
-          set -eo pipefail
+          set -e
+          set -o pipefail
 
           micromamba activate build-ocp
           if [[ "$RUNNER_OS" == "Windows" ]]; then
@@ -850,7 +872,8 @@ jobs:
         if: runner.os == 'Linux' && steps.cache-ocp-restore.outputs.cache-hit != 'true'
         shell: bash -l {0}
         run: |
-          set -eo pipefail
+          set -e
+          set -o pipefail
 
           micromamba activate build-ocp
 
@@ -894,7 +917,8 @@ jobs:
         if: runner.os == 'macOS' && steps.cache-ocp-restore.outputs.cache-hit != 'true'
         shell: bash -l {0}
         run: |
-          set -eo pipefail
+          set -e
+          set -o pipefail
 
           micromamba activate build-ocp
 
@@ -1008,7 +1032,8 @@ jobs:
       - name: Create the cadquery_ocp wheel
         shell: bash -l {0}
         run: |
-          set -eo pipefail
+          set -e
+          set -o pipefail
 
           micromamba activate build-ocp
           pip install build wheel ${{ matrix.delocate }}
@@ -1097,7 +1122,8 @@ jobs:
         if: runner.os == 'Linux'
         shell: bash -l {0}
         run: |
-          set -eo pipefail
+          set -e
+          set -o pipefail
 
           micromamba activate build-ocp
           cd pypi
@@ -1138,7 +1164,8 @@ jobs:
         if: runner.os == 'macOS'
         shell: bash -l {0}
         run: |
-          set -eo pipefail
+          set -e
+          set -o pipefail
 
           micromamba activate build-ocp
 
@@ -1173,7 +1200,8 @@ jobs:
         if: runner.os == 'Windows'
         shell: bash -l {0}
         run: |
-          set -eo pipefail
+          set -e
+          set -o pipefail
 
           micromamba activate build-ocp
 
@@ -1213,7 +1241,8 @@ jobs:
       - name: Create the test environment
         shell: bash -l {0}
         run: |
-          set -eo pipefail
+          set -e
+          set -o pipefail
 
           micromamba create -y -n test python=${{ matrix.python-version }}
           micromamba activate test
@@ -1249,7 +1278,8 @@ jobs:
       - name: Install VTK and OCP wheel
         shell: bash -l {0}
         run: |
-          set -eo pipefail
+          set -e
+          set -o pipefail
 
           micromamba activate test
           if [[ "${{ matrix.use-vtk }}" == "vtk" ]]; then
@@ -1269,7 +1299,8 @@ jobs:
       - name: Run build123d tests
         shell: bash -l {0}
         run: |
-          set -eo pipefail
+          set -e
+          set -o pipefail
 
           micromamba activate test
 
@@ -1295,7 +1326,8 @@ jobs:
         if: matrix.use-vtk == 'vtk'
         shell: bash -l {0}
         run: |
-          set -eo pipefail
+          set -e
+          set -o pipefail
 
           git clone https://github.com/cadquery/cadquery.git
           cd cadquery
@@ -1329,7 +1361,8 @@ jobs:
         # if: matrix.python-version != '3.13'
         shell: bash -l {0}
         run: |
-          set -eo pipefail
+          set -e
+          set -o pipefail
 
           micromamba activate test
           if [[ "${{ matrix.use-vtk }}" == "vtk" ]]; then
