--- a/.github/workflows/build-ocp.yml
+++ b/.github/workflows/build-ocp.yml
@@ -1323,16 +1323,38 @@ jobs:
           # install ocp_svg and svgelements (a ocp_svg dependency) without cadquery_ocp dependency
           pip install --no-deps ocpsvg svgelements
           
-          # kick out ocp_svg, since it relies on cadquery_ocp 7.8
+          # Patch to remove dependency ocp_svg, since it relies on cadquery_ocp 7.8
           ${{ matrix.sed_i }} '/ocpsvg/d' pyproject.toml
           
-          # allow cadquery_ocp v7.9
+          # Patch to allow cadquery_ocp v7.9
           if [[ "${{ matrix.use-vtk }}" == "novtk" ]]; then
             ${{ matrix.sed_i }} 's/"cadquery-ocp >= 7\.8, < 7\.9",/"cadquery-ocp-novtk >= 7.9, < 8.0",/' pyproject.toml
           else
             ${{ matrix.sed_i }} 's/"cadquery-ocp >= 7\.8, < 7\.9",/"cadquery-ocp >= 7.9, < 8.0",/' pyproject.toml
           fi
-          
+
+          # Patch for OCP 7.9
+          for f in \
+            geometry.py \
+            exporters.py \
+            topology/shape_core.py \
+            topology/composite.py \
+            topology/zero_d.py \
+            topology/one_d.py \
+            topology/two_d.py \
+            topology/three_d.py \
+            topology/utils.py;
+          do
+            gsed -i "s/TopoDS.Vertex_s/TopoDS.Vertex/g" src/build123d/$f
+            gsed -i "s/TopoDS.Edge_s/TopoDS.Edge/g" src/build123d/$f
+            gsed -i "s/TopoDS.Wire_s/TopoDS.Wire/g" src/build123d/$f
+            gsed -i "s/TopoDS.Face_s/TopoDS.Face/g" src/build123d/$f
+            gsed -i "s/TopoDS.Shell_s/TopoDS.Shell/g" src/build123d/$f
+            gsed -i "s/TopoDS.Solid_s/TopoDS.Solid/g" src/build123d/$f
+            gsed -i "s/TopoDS.Compound_s/TopoDS.Compound/g" src/build123d/$f
+            gsed -i "s/TopoDS.CompSolid_s/TopoDS.CompSolid/g" src/build123d/$f
+          done
+
           # install build123d without ocp_svg dependency (since it is already installed)
           pip install .
 
@@ -1362,8 +1384,22 @@ jobs:
           git clone https://github.com/cadquery/cadquery.git
           cd cadquery
 
-          # allow cadquery_ocp v7.9
+          # Patch to allow cadquery_ocp v7.9
           ${{ matrix.sed_i }} 's/"cadquery-ocp>=7\.8\.1,<7\.9",/"cadquery-ocp>=7.9,< 8.0",/' setup.py
+
+          # Patch for OCP 7.9
+          for f in \
+            cadquery/occ_impl/shapes.py;
+          do
+            gsed -i "s/TopoDS.Vertex_s/TopoDS.Vertex/g" $f
+            gsed -i "s/TopoDS.Edge_s/TopoDS.Edge/g" $f
+            gsed -i "s/TopoDS.Wire_s/TopoDS.Wire/g" $f
+            gsed -i "s/TopoDS.Face_s/TopoDS.Face/g" $f
+            gsed -i "s/TopoDS.Shell_s/TopoDS.Shell/g" $f
+            gsed -i "s/TopoDS.Solid_s/TopoDS.Solid/g" $f
+            gsed -i "s/TopoDS.Compound_s/TopoDS.Compound/g" $f
+            gsed -i "s/TopoDS.CompSolid_s/TopoDS.CompSolid/g" $f
+          done
 
           # if [[ "${{ matrix.python-version }}" == "3.13" ]]; then
           #   patch -p1 < ../patches/cadquery.patch
