--- a/.github/workflows/build-ocp.yml
+++ b/.github/workflows/build-ocp.yml
@@ -679,31 +679,31 @@ jobs:
         use-vtk: ["vtk", "novtk"]
 
         include:
-          - os: "macos-15"
-            delocate: delocate
-            plat: macosx_11_1_arm64
-            sed_i: "gsed -i"
-            module: "OCP.*.so"
-            env: "MACOSX_DEPLOYMENT_TARGET=11.1"
-            shells: "bash"
-            ocp_tag: "macos-15"
-          - os: "macos-13"
-            delocate: delocate
-            plat: macosx_11_1_x86_64
-            sed_i: "gsed -i"
-            module: "OCP.*.so"
-            env: "MACOSX_DEPLOYMENT_TARGET=11.1"
-            shells: "bash"
-            ocp_tag: "macos-15"
-          - os: "ubuntu-22.04"
-            delocate: auditwheel patchelf
-            plat: manylinux_2_34_x86_64
-            sed_i: "sed -i"
-            compilers: ""
-            module: "OCP.*.so"
-            env: "DUMMY=0"
-            shells: "bash"
-            ocp_tag: "ubuntu-22.04"
+          # - os: "macos-15"
+          #   delocate: delocate
+          #   plat: macosx_11_1_arm64
+          #   sed_i: "gsed -i"
+          #   module: "OCP.*.so"
+          #   env: "MACOSX_DEPLOYMENT_TARGET=11.1"
+          #   shells: "bash"
+          #   ocp_tag: "macos-15"
+          # - os: "macos-13"
+          #   delocate: delocate
+          #   plat: macosx_11_1_x86_64
+          #   sed_i: "gsed -i"
+          #   module: "OCP.*.so"
+          #   env: "MACOSX_DEPLOYMENT_TARGET=11.1"
+          #   shells: "bash"
+          #   ocp_tag: "macos-15"
+          # - os: "ubuntu-22.04"
+          #   delocate: auditwheel patchelf
+          #   plat: manylinux_2_34_x86_64
+          #   sed_i: "sed -i"
+          #   compilers: ""
+          #   module: "OCP.*.so"
+          #   env: "DUMMY=0"
+          #   shells: "bash"
+          #   ocp_tag: "ubuntu-22.04"
           - os: "windows-2022"
             delocate: delvewheel
             plat: win_amd64
@@ -737,7 +737,7 @@ jobs:
           init-shell: ${{ matrix.shells }}
           cache-downloads: true
           cache-environment: true
-          cache-environment-key: environment-pywrap-${{ env.OCP }}
+          cache-environment-key: environment-${{ env.OCP }}
 
       # - - -
 
