--- a/.github/workflows/build-ocp.yml
+++ b/.github/workflows/build-ocp.yml
@@ -673,44 +673,44 @@ jobs:
       fail-fast: false
       matrix:
         # os: ["macos-13", "macos-15", "ubuntu-22.04", "windows-2022"]
-        os: ["windows-2022"]
+        os: ["macos-13", "macos-15", "ubuntu-22.04"]
         # python-version: ["3.10", "3.11", "3.12", "3.13"]
         python-version: ["3.13"]
         use-vtk: ["vtk", "novtk"]
 
         include:
-          # - os: "macos-15"
-          #   delocate: delocate
-          #   plat: macosx_11_1_arm64
-          #   sed_i: "gsed -i"
-          #   module: "OCP.*.so"
-          #   env: "MACOSX_DEPLOYMENT_TARGET=11.1"
-          #   shells: "bash"
-          #   ocp_tag: "macos-15"
-          # - os: "macos-13"
-          #   delocate: delocate
-          #   plat: macosx_11_1_x86_64
-          #   sed_i: "gsed -i"
-          #   module: "OCP.*.so"
-          #   env: "MACOSX_DEPLOYMENT_TARGET=11.1"
-          #   shells: "bash"
-          #   ocp_tag: "macos-15"
-          # - os: "ubuntu-22.04"
-          #   delocate: auditwheel patchelf
-          #   plat: manylinux_2_34_x86_64
-          #   sed_i: "sed -i"
-          #   compilers: ""
-          #   module: "OCP.*.so"
-          #   env: "DUMMY=0"
-          #   shells: "bash"
-          #   ocp_tag: "ubuntu-22.04"
-          - os: "windows-2022"
-            delocate: delvewheel
-            plat: win_amd64
+          - os: "macos-15"
+            delocate: delocate
+            plat: macosx_11_1_arm64
+            sed_i: "gsed -i"
+            module: "OCP.*.so"
+            env: "MACOSX_DEPLOYMENT_TARGET=11.1"
+            shells: "bash"
+            ocp_tag: "macos-15"
+          - os: "macos-13"
+            delocate: delocate
+            plat: macosx_11_1_x86_64
+            sed_i: "gsed -i"
+            module: "OCP.*.so"
+            env: "MACOSX_DEPLOYMENT_TARGET=11.1"
+            shells: "bash"
+            ocp_tag: "macos-15"
+          - os: "ubuntu-22.04"
+            delocate: auditwheel patchelf
+            plat: manylinux_2_34_x86_64
             sed_i: "sed -i"
-            shells: "bash cmd.exe"
-            module: "OCP.*.pyd"
-            ocp_tag: "windows-2022"
+            compilers: ""
+            module: "OCP.*.so"
+            env: "DUMMY=0"
+            shells: "bash"
+            ocp_tag: "ubuntu-22.04"
+          # - os: "windows-2022"
+          #   delocate: delvewheel
+          #   plat: win_amd64
+          #   sed_i: "sed -i"
+          #   shells: "bash cmd.exe"
+          #   module: "OCP.*.pyd"
+          #   ocp_tag: "windows-2022"
 
     steps:
       - uses: actions/checkout@v4
@@ -793,7 +793,7 @@ jobs:
           key: OCCT-${{ env.OCCT }}-py-${{ matrix.python-version }}-${{ matrix.use-vtk }}-${{ matrix.os }}-
 
       # - - - 
-      # Create sources for supporting vtk - will be patched later for novtk
+      # Restore sources (supporting vtk - will be patched later for novtk)
       # - - - 
 
       - name: Restore OCP source cache
@@ -869,8 +869,8 @@ jobs:
 
       # - - -
 
-      - name: (Linux) Generate OCP build files and build OCP
-        if: runner.os == 'Linux' && steps.cache-ocp-restore.outputs.cache-hit != 'true'
+      - name: (Linux, Mac) Generate OCP build files and build OCP
+        if: runner.os != 'Windows' && steps.cache-ocp-restore.outputs.cache-hit != 'true'
         shell: bash -l {0}
         run: |
           set -e
@@ -883,6 +883,9 @@ jobs:
           mv new/OCP .
 
           if [[ "${{ matrix.use-vtk }}" == "vtk" ]]; then
+            if [[ "$RUNNER_OS" == "macOS" ]]; then 
+              export LDFLAGS="-L$HOME/opt/local/vtk-${{ env.VTK }}/lib"
+            fi          
             VTK_DIR="-D VTK_DIR=$HOME/opt/local/vtk-${{ env.VTK }}"
           else
             cd OCP
@@ -895,13 +898,22 @@ jobs:
             VTK_DIR=""
           fi
 
+          CXX_FLAGS="-isystem $CONDA_PREFIX/include -fvisibility=hidden -w"
+          if [[ "$RUNNER_OS" == "macOS" ]]; then
+            EXTRA_FLAGS="-D CMAKE_CXX_FLAGS=\"$CXX_FLAGS\""
+            EXTRA_FLAGS="$EXTRA_FLAGS -D CMAKE_C_COMPILER=clang -D CMAKE_CXX_COMPILER=clang++ "
+            EXTRA_FLAGS="$EXTRA_FLAGS -D CMAKE_OSX_DEPLOYMENT_TARGET=11.1"
+          else
+            EXTRA_FLAGS="-D CMAKE_CXX_FLAGS=\"$CXX_FLAGS -D_GLIBCXX_USE_CXX11_ABI=0\""
+          fi
+
           cmake -B build -S OCP -G Ninja \
           -D CMAKE_BUILD_TYPE=Release \
               $VTK_DIR \
               -D OpenCASCADE_DIR=$HOME/opt/local/occt-${{ env.OCCT }}-${{ matrix.use-vtk }}/lib/cmake/opencascade \
               -D pybind11_DIR=$(python -c "import pybind11; print(pybind11.get_cmake_dir())") \
               -D CMAKE_CXX_STANDARD=17 \
-              -D CMAKE_CXX_FLAGS="-isystem $CONDA_PREFIX/include -D_GLIBCXX_USE_CXX11_ABI=0 -fvisibility=hidden -w" \
+              $EXTRA_FLAGS \
               -D CMAKE_MODULE_LINKER_FLAGS="-L $CONDA_PREFIX/lib -L $HOME/opt/local/vtk-${{ env.VTK }}/lib" \
               -D CMAKE_BUILD_WITH_INSTALL_RPATH=TRUE
 
@@ -916,56 +928,101 @@ jobs:
 
           ninja -C build -j ${{ steps.cpu-count.outputs.cpu_count }}
 
-      # - - -
+      # - name: (Linux) Generate OCP build files and build OCP
+      #   if: runner.os == 'Linux' && steps.cache-ocp-restore.outputs.cache-hit != 'true'
+      #   shell: bash -l {0}
+      #   run: |
+      #     set -e
+      #     set -o pipefail
 
-      - name: (Mac) Generate OCP build files and build OCP
-        if: runner.os == 'macOS' && steps.cache-ocp-restore.outputs.cache-hit != 'true'
-        shell: bash -l {0}
-        run: |
-          set -e
-          set -o pipefail
+      #     micromamba activate build-ocp
 
-          micromamba activate build-ocp
+      #     cd OCP
+          
+      #     mv new/OCP .
+      #       VTK_DIR="-D VTK_DIR=$HOME/opt/local/vtk-${{ env.VTK }}"
+      #     else
+      #       cd OCP
+      #       # patch -p1 < ../../patches/no-vtk.patch
+      #       echo "Patch VTK out of CMakeLists.txt"
+      #       ${{ matrix.sed_i }} '/find_package( VTK/,/)/d' CMakeLists.txt
+      #       ${{ matrix.sed_i }} '/VTK::/d' CMakeLists.txt
 
-          cd OCP
+      #       cd ..
+      #       VTK_DIR=""
+      #     fi
 
-          mv new/OCP .
+      #     cmake -B build -S OCP -G Ninja \
+      #     -D CMAKE_BUILD_TYPE=Release \
+      #         $VTK_DIR \
+      #         -D OpenCASCADE_DIR=$HOME/opt/local/occt-${{ env.OCCT }}-${{ matrix.use-vtk }}/lib/cmake/opencascade \
+      #         -D pybind11_DIR=$(python -c "import pybind11; print(pybind11.get_cmake_dir())") \
+      #         -D CMAKE_CXX_STANDARD=17 \
+      #         -D CMAKE_CXX_FLAGS="-isystem $CONDA_PREFIX/include -D_GLIBCXX_USE_CXX11_ABI=0 -fvisibility=hidden -w" \
+      #         -D CMAKE_MODULE_LINKER_FLAGS="-L $CONDA_PREFIX/lib -L $HOME/opt/local/vtk-${{ env.VTK }}/lib" \
+      #         -D CMAKE_BUILD_WITH_INSTALL_RPATH=TRUE
 
-          if [[ "${{ matrix.use-vtk }}" == "vtk" ]]; then
-            export LDFLAGS="-L$HOME/opt/local/vtk-${{ env.VTK }}/lib"
-            VTK_DIR="-D VTK_DIR=$HOME/opt/local/vtk-${{ env.VTK }}"
-          else
-            cd OCP
-            # patch -p1 < ../../patches/no-vtk.patch
-            echo "Patch VTK out of CMakeLists.txt"
-            ${{ matrix.sed_i }} '/find_package( VTK/,/)/d' CMakeLists.txt
-            ${{ matrix.sed_i }} '/VTK::/d' CMakeLists.txt
+      #     if [[ "${{ matrix.use-vtk }}" == "vtk" ]]; then
+      #       for l in libvtkCommonCore  libvtkCommonDataModel libvtkCommonExecutionModel \
+      #                libvtkRenderingCore  libvtkRenderingFreeType  libvtkFiltersGeneral \
+      #                libvtkInteractionStyle  libvtkRenderingOpenGL2 \
+      #                libvtkWrappingPythonCore${{ matrix.python-version }}; do
+      #           ${{ matrix.sed_i }} "s/$l-${{ env.VTK_MAJOR }}/$l/" build/build.ninja
+      #       done
+      #     fi
 
-            cd ..
-            VTK_DIR=""
-          fi
+      #     ninja -C build -j ${{ steps.cpu-count.outputs.cpu_count }}
 
-          env ${{ matrix.env }} cmake -B build -S OCP -G Ninja \
-              -D CMAKE_C_COMPILER=clang -D CMAKE_CXX_COMPILER=clang++ \
-              -D CMAKE_BUILD_TYPE=Release \
-              -D CMAKE_OSX_DEPLOYMENT_TARGET="11.1" \
-              -D CMAKE_CXX_FLAGS="-isystem $CONDA_PREFIX/include -fvisibility=hidden -w" \
-              $VTK_DIR \
-              -D OpenCASCADE_DIR=$HOME/opt/local/occt-${{ env.OCCT }}-${{ matrix.use-vtk }}/lib/cmake/opencascade \
-              -D pybind11_DIR=$(python -c "import pybind11; print(pybind11.get_cmake_dir())") \
-              -D CMAKE_CXX_STANDARD=17 \
-              -D CMAKE_OSX_SYSROOT=/opt/MacOSX11.3.sdk
+      # # - - -
 
-          if [[ "${{ matrix.use-vtk }}" == "vtk" ]]; then
-            for l in libvtkCommonCore  libvtkCommonDataModel libvtkCommonExecutionModel \
-                     libvtkRenderingCore  libvtkRenderingFreeType  libvtkFiltersGeneral \
-                     libvtkInteractionStyle  libvtkRenderingOpenGL2 \
-                     libvtkWrappingPythonCore${{ matrix.python-version }}; do
-                ${{ matrix.sed_i }} "s/$l-${{ env.VTK_MAJOR }}/$l/" build/build.ninja
-            done
-          fi
+      # - name: (Mac) Generate OCP build files and build OCP
+      #   if: runner.os == 'macOS' && steps.cache-ocp-restore.outputs.cache-hit != 'true'
+      #   shell: bash -l {0}
+      #   run: |
+      #     set -e
+      #     set -o pipefail
 
-          ninja -C build -j ${{ steps.cpu-count.outputs.cpu_count }}
+      #     micromamba activate build-ocp
+
+      #     cd OCP
+
+      #     mv new/OCP .
+
+      #     if [[ "${{ matrix.use-vtk }}" == "vtk" ]]; then
+      #       export LDFLAGS="-L$HOME/opt/local/vtk-${{ env.VTK }}/lib"
+      #       VTK_DIR="-D VTK_DIR=$HOME/opt/local/vtk-${{ env.VTK }}"
+      #     else
+      #       cd OCP
+      #       # patch -p1 < ../../patches/no-vtk.patch
+      #       echo "Patch VTK out of CMakeLists.txt"
+      #       ${{ matrix.sed_i }} '/find_package( VTK/,/)/d' CMakeLists.txt
+      #       ${{ matrix.sed_i }} '/VTK::/d' CMakeLists.txt
+
+      #       cd ..
+      #       VTK_DIR=""
+      #     fi
+
+      #     env ${{ matrix.env }} cmake -B build -S OCP -G Ninja \
+      #         -D CMAKE_C_COMPILER=clang -D CMAKE_CXX_COMPILER=clang++ \
+      #         -D CMAKE_BUILD_TYPE=Release \
+      #         -D CMAKE_OSX_DEPLOYMENT_TARGET="11.1" \
+      #         -D CMAKE_CXX_FLAGS="-isystem $CONDA_PREFIX/include -fvisibility=hidden -w" \
+      #         $VTK_DIR \
+      #         -D OpenCASCADE_DIR=$HOME/opt/local/occt-${{ env.OCCT }}-${{ matrix.use-vtk }}/lib/cmake/opencascade \
+      #         -D pybind11_DIR=$(python -c "import pybind11; print(pybind11.get_cmake_dir())") \
+      #         -D CMAKE_CXX_STANDARD=17 \
+      #         -D CMAKE_OSX_SYSROOT=/opt/MacOSX11.3.sdk
+
+      #     if [[ "${{ matrix.use-vtk }}" == "vtk" ]]; then
+      #       for l in libvtkCommonCore  libvtkCommonDataModel libvtkCommonExecutionModel \
+      #                libvtkRenderingCore  libvtkRenderingFreeType  libvtkFiltersGeneral \
+      #                libvtkInteractionStyle  libvtkRenderingOpenGL2 \
+      #                libvtkWrappingPythonCore${{ matrix.python-version }}; do
+      #           ${{ matrix.sed_i }} "s/$l-${{ env.VTK_MAJOR }}/$l/" build/build.ninja
+      #       done
+      #     fi
+
+      #     ninja -C build -j ${{ steps.cpu-count.outputs.cpu_count }}
 
       # - - - Prepare under bash ...
 
